<resources>
    <string name="app_name">Calculator vault</string>
    <string name="app_name1">My Calculator</string>
    <string name="app_name_disguised">Calculator vault</string>
    <string name="f0x5389e0a">\"\"</string>
    <string name="visitweb">https://www.Example.net/ns-vault</string>
    <string name="facebookurl">https://www.facebook.com/Example.net</string>
    <string name="twitterurl">https://twitter.com/ExampleInc</string>
    <string name="gplusurl">https://www.instagram.com/Exampleinc/</string>
    <string name="privacypolicyurl">https://www.Example.net/ns-vault/license/</string>
    <string name="CancelPEr">Cancel</string>
    <string name="ToLoad">To Load All Documents,\nApp needs the permission to access the files</string>
    <string name="allow">Allow</string>
    <string name="don_apos_t_worry_10files_that_are_not_related_to_app_are_not_accessed">Don\'t Worry!\nFiles that are not related to App are not accessed.</string>
    <string name="vault_name_cal">Calculator</string>
    <string name="Created_time">Created Time</string>
    <string name="Delete_error">Some Error Occured in Deleting.</string>
    <string name="Move_error">Some Error Occured in Moving.</string>
    <string name="Support_title">Support</string>
    <string name="Support_value">Support@example.net</string>
    <string name="Unhide_error">Some Error Occured in Resotring.</string>
    <string name="Visit_title">Visit</string>
    <string name="Visit_value">http://www.example.net</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_download">Download</string>
    <string name="action_more">More</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="add_folder">Create Folder</string>
    <string name="add_folder_hint">Enter Folder Name</string>
    <string name="alert_dialogTopStorageOption">Select Storage Location</string>
    <string name="alert_dialog_phone_memory">Phone Memory</string>
    <string name="alert_dialog_sd_card">SD Card</string>
    <string name="app_4shared">4shared</string>
    <string name="app_Box">Box</string>
    <string name="app_Dropbox">Dropbox</string>
    <string name="app_Livejournal">LiveJournal</string>
    <string name="app_Technorati">Technorati</string>
    <string name="app_amazon">Amazon</string>
    <string name="app_blogger">Blogger</string>
    <string name="app_dailymotion">Dailymotion</string>
    <string name="app_delicious">Delicious</string>
    <string name="app_digg">Digg</string>
    <string name="app_diigo">diigo</string>
    <string name="app_docin">docin</string>
    <string name="app_docstoc">docstoc</string>
    <string name="app_ebay">ebay</string>
    <string name="app_ezinearticles">Ezine Articles</string>
    <string name="app_facebook">Facebook</string>
    <string name="app_flickr">Flickr</string>
    <string name="app_folkd">folkd</string>
    <string name="app_foursquare">Foursquare</string>
    <string name="app_google_plus">Google+</string>
    <string name="app_hi5">Hi5</string>
    <string name="app_imdb">IMDB</string>
    <string name="app_instagram">Instagram</string>
    <string name="app_instapaper">instapaper</string>
    <string name="app_issuu">issuu</string>
    <string name="app_linkedin">LinkedIn</string>
    <string name="app_meet_me">MeetMe</string>
    <string name="app_meetup">Meetup</string>
    <string name="app_myspace">Myspace</string>
    <string name="app_pinterest">Pinterest</string>
    <string name="app_plurk">plurk</string>
    <string name="app_quora">Quora</string>
    <string name="app_reddit">Reddit</string>
    <string name="app_scoop">scoop</string>
    <string name="app_scribd">Scribd</string>
    <string name="app_skype">Skype</string>
    <string name="app_slideshare">slideshare</string>
    <string name="app_sound_cloud">SoundCloud</string>
    <string name="app_squidoo">squidoo</string>
    <string name="app_storify">storify</string>
    <string name="app_stumbleupon">Stumbleupon</string>
    <string name="app_tagged">Tagged</string>
    <string name="app_tumblr">Tumblr</string>
    <string name="app_twitter">Twitter</string>
    <string name="app_vimeo">Vimeo</string>
    <string name="app_wikipedia">Wikipedia</string>
    <string name="app_yahoo_answer">Yahoo answer</string>
    <string name="app_yelp">yelp</string>
    <string name="app_youtube">YouTube</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="backup_emildilog_desc">"If you don't set email address here, then your password will not be recovered. Any time you can set or change email address from Recovery of Credentials in Settings."</string>
    <string name="backup_emildilog_desctitle"><b>Warning:</b></string>
    <string name="backup_emildilog_title">Enter email address to recover security credential</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cal_pin_text">Enter a 4-digit Password and \n Press the <b>=</b> Button</string>
    <string name="cal_pin_text_conf">Enter calculator PIN and tap <b>%</b>" sign "</string>
    <string name="cal_pin_text_confirm">Confirm calculator PIN and tap <b>=</b> sign to save</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="category_name">Category Name</string>
    <string name="check_agree_button">First select \"Agree\"</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="decoy_mode_toast_disguise">Decoy mode is not available because you set Calcualtor disguise mode.</string>
    <string name="del_bookmarks">Are you sure you want to delete bookmark(s) ?</string>
    <string name="del_download_history">Are you sure you want to delete browsing history ?</string>
    <string name="del_history">Are you sure you want to delete browsing history ?</string>
    <string name="delete">Delete</string>
    <string name="delete_entry">Are you sure you want to delete this entry ?</string>
    <string name="delete_note">Are you sure you want to delete this Note ?</string>
    <string name="delete_toast">Are you sure you want to Delete</string>
    <string name="delete_todo">Are you sure you want to delete this To do list ?</string>
    <string name="detail">Detail</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="disable_operation_cal">Only use digits 0 to 9</string>
    <string name="discard_changes">Are you sure you want to discard changes?</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_pending">Starting download…</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="dropbox_Audios">Audios</string>
    <string name="dropbox_Documents">Docs</string>
    <string name="dropbox_Photos">Photos</string>
    <string name="dropbox_Videos">Videos</string>
    <string name="edit">Edit</string>
    <string name="edit_options_deletephoto">Are you sure you want to Delete photo(s)?</string>
    <string name="edit_options_deletevideo">Are you sure you want to Delete video(s)?</string>
    <string name="empty_note">Can not save empty note</string>
    <string name="empty_note_folder">No note(s) added yet</string>
    <string name="empty_note_name">Please enter note name</string>
    <string name="empty_wallet_folder">No entry(s) added yet</string>
    <string name="enter_password">Enter password...</string>
    <string name="entry">Entry</string>
    <string name="entry_deleted">Entry deleted successfully</string>
    <string name="entry_exists">Entry already Exists</string>
    <string name="entry_field">Entry Field</string>
    <string name="entry_name_enter">Please provide entry name</string>
    <string name="entry_not_deleted">Entry could not be deleted</string>
    <string name="entry_not_saved">Entry could not be saved</string>
    <string name="entry_saved">Entry saved successfully</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="for_calculator_forgot_pin">Check your email inbox...</string>
    <string name="for_email">To recover Calculator PIN tap five time <b> \"+\" </b> sign.</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="inapp_billing_service_unavailable">In-app billing service is unavailable, please upgrade Android Market/Play to version >= 3.9.16</string>
    <string name="inapp_not_initialized">InApp is not initialized,Please wait and try again</string>
    <string name="lbl1minute">1 minute</string>
    <string name="lbl30Seconds">30 Seconds</string>
    <string name="lbl3minutes">3 minutes</string>
    <string name="lbl5minutes">5 minutes</string>
    <string name="lblAdvanced_Lock">Advanced Lock</string>
    <string name="lblAdvanced_Settings_lbl">Advanced Settings</string>
    <string name="lblAlet">SD card permission</string>
    <string name="lblDelayToLock">Delay to lock</string>
    <string name="lblDelayToLockDesc">Re-lock is not required when returning from a brief exit</string>
    <string name="lblDelaytimelimit">Delay time limit</string>
    <string name="lblHint">Hint</string>
    <string name="lblLockNewApp">Lock the new app</string>
    <string name="lblLockNewAppDesc">After you installed the new app, you can one tap to lock the app.</string>
    <string name="lblSave">Save</string>
    <string name="lblUntilscreenislocked">Until screen is locked</string>
    <string name="lbl_Skip">Skip</string>
    <string name="lbl_dislike">Dislike</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_rate_desc">Then express your satisfaction by rating this app, rating the app takes few seconds...</string>
    <string name="lbl_rate_five_star">Rate 5 stars</string>
    <string name="lbl_rate_heading">Enjoying this app?</string>
    <string name="lblcloud_backup">Cloud Backup</string>
    <string name="lblsdhintmsgbox">Your lollipop device has restricted access for SD card permissions. You must grant special permission to access SD card root directory.</string>
    <string name="lblsdhintmsgbox1">\"Please choose the root directory in external SD.\"</string>
    <string name="lblsdhintmsgbox2">Please follow below steps.</string>
    <string name="lblsetting_RecoveryofCredentials_email_hint">Enter email…</string>
    <string name="lblsetting_SecurityCredentials_setpassword_Cancel">Cancel</string>
    <string name="lblsetting_SecurityCredentials_setpassword_Continue">Continue</string>
    <string name="more_options">More Options</string>
    <string name="search">Search</string>
</resources>