<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/top_srch_icon"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cloud"
        android:icon="@drawable/ic_topcloudicon"
        android:orderInCategory="2"
        android:title="@string/lblcloud_backup"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_viewSort"
        android:icon="@drawable/ic_more_top_bar_icon"
        android:orderInCategory="3"
        android:title="@string/more_options"
        app:showAsAction="always" />
</menu>