<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#ffffffff"
    android:orientation="vertical"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/permission_dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ToLoad"
            android:textSize="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/don_apos_t_worry_10files_that_are_not_related_to_app_are_not_accessed"
            android:textSize="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancelDialog"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/CancelPEr"
                android:textAllCaps="false"
                android:textColor="#2080d7"
             />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:backgroundTint="#2080d7"
                android:text="@string/allow"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
