<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10.0dip"
    android:layout_marginRight="10.0dip"
    android:background="@drawable/rateandreviewshape"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_ratePopup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:background="@color/ColorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/appicon" />

            <TextView
                android:id="@+id/lbl_ratePopupHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10.0dip"
                android:text="@string/app_name_disguised"
                android:textColor="@color/ColorAppTheme"
                android:textSize="19.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_rate_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/lbl_rate_heading"
            android:textColor="@color/ColorAppTheme"
            android:textSize="17.0sp" />

        <TextView
            android:id="@+id/lbl_ratePopupDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/lbl_rate_desc"
            android:textColor="@color/popup_text_color"
            android:textSize="16.0sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:src="@drawable/fivestar" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <LinearLayout
                android:id="@+id/ll_dislike"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_dislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5.0dip"
                    android:text="@string/lbl_dislike"
                    android:textColor="@color/popup_text_color"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rate_five_star"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_rate_five_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:text="@string/lbl_rate_five_star"
                    android:textColor="@color/ColorAppTheme"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_later"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_later"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5.0dip"
                    android:text="@string/lbl_later"
                    android:textColor="@color/rate_dialog_back_color"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>