<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_email_popup_bg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/ColorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_email_popup_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblEmail_popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="12.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/backup_emildilog_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black_color"
            android:textSize="18.0sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtemailid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="35.0dip"
                android:layout_marginRight="20.0dip"
                android:background="@drawable/list_login_option_click"
                android:ems="5"
                android:hint="@string/lblsetting_RecoveryofCredentials_email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="10.0dip"
                android:paddingTop="6.0dip"
                android:paddingBottom="6.0dip"
                android:selectAllOnFocus="true"
                android:textColor="@color/ColorAppTheme">

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_email_warning_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.0dip"
                        android:layout_marginRight="12.0dip"
                        android:paddingLeft="8.0dip"
                        android:paddingTop="30.0dip"
                        android:paddingRight="8.0dip"
                        android:text="@string/backup_emildilog_desctitle"
                        android:textColor="@color/red_dark"
                        android:textSize="18.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbl_email_warning_desc"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.0dip"
                        android:layout_marginRight="12.0dip"
                        android:paddingLeft="8.0dip"
                        android:paddingTop="10.0dip"
                        android:paddingRight="8.0dip"
                        android:paddingBottom="8.0dip"
                        android:text="@string/backup_emildilog_desc"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/red_dark"
                        android:textSize="17.0sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.0dip"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_Save"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="1.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:text="@string/lblSave"
                android:fontFamily="@font/font"
                android:textColor="@color/white"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Skip"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/btn_bottom_baar_album"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"                android:fontFamily="@font/font"

                android:text="@string/lbl_Skip"
                android:textColor="@color/white"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>